--- a/Playground/package.json
+++ b/Playground/package.json
@@ -45,7 +45,9 @@
     }
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "bower": "^1.8.4",
-    "generator-karma": "^2.0.1"
+    "generator-karma": "^2.0.1",
+    "jquerykeyframes": "1.0.5"
   }
 }
